added changes via outcome box and font changed red

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <button class="playerButton" id="paper" value="paper">PAPER</button>
             <button class="playerButton" id="scissors" value="scissors">SCISSORS</button>
         </div>
+        <div id="outcome"></div>
         <div class="gameDeclaration">
            <p id="answer"></p>
         </div>
